   implements Iterable<FilterClause>, and allows adding Filters without
   creating FilterClause.  (Uwe Schindler)

 * LUCENE-3445: Added SearcherManager, to manage sharing and reopening
   IndexSearchers across multiple search threads.  IndexReader's
   refCount is used to safely close the reader only once all threads are done
   using it.  (Michael McCandless)

Bug Fixes

 * LUCENE-3417: DictionaryCompoundWordFilter did not properly add tokens from the
   end compound word. (Njal Karevoll via Robert Muir)

 * LUCENE-3019: Fix unexpected color tags for FastVectorHighlighter. (Koji Sekiguchi)

 * LUCENE-3446: Fix NPE in BooleanFilter when DocIdSet/DocIdSetIterator is null.
   Converted code to FixedBitSet and simplified.  (Uwe Schindler, Shuji Umino)
   
 * LUCENE-3484: Fix NPE in TaxonomyWriter: parents array creation was not thread safe.
   (Doron Cohen)
   
 * LUCENE-3495: Fix BlockJoinQuery to properly implement getBoost()/setBoost().
   (Robert Muir)

API Changes
 
 * LUCENE-3436: Add SuggestMode to the spellchecker, so you can specify the strategy
   for suggesting related terms.  (James Dyer via Robert Muir)

======================= Lucene 3.4.0 ================

New Features

 * LUCENE-3234: provide a limit on phrase analysis in FastVectorHighlighter for
   highlighting speed up. Use FastVectorHighlighter.setPhraseLimit() to set limit
   (e.g. 5000). (Mike Sokolov via Koji Sekiguchi)

 * LUCENE-3079: a new facet module which provides faceted indexing & search
   capabilities. It allows managing a taxonomy of categories, and index them
   with documents. It also provides search API for aggregating (e.g. count)
   the weights of the categories that are relevant to the search results. 
   (Shai Erera)
   
 * LUCENE-3171: Added BlockJoinQuery and BlockJoinCollector, under the
   new contrib/join module, to enable searches that require joining
   between parent and child documents.  Joined (children + parent)